# cargo-kcov

./: .gitignore  .travis.yml  Cargo.toml  README.md
specimen/: Cargo.toml
specimen/benches/: eighth.rs  seventh.rs
specimen/examples/: fourth.rs  third.rs
specimen/inner/: Cargo.toml
specimen/src/: lib.rs  main.rs
specimen/tests/: fifth.rs  sixth.rs  한국어이름.rs
src/: cargo.rs  errors.rs  install_kcov.sh  main.rs  stderr.rs  target_finder.rs
tests/: check-colorless-output.rs  check-specimen.rs
