[package]
name = "cargo-kcov"
version = "0.4.0"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Cargo subcommand to run kcov to get coverage report on Linux"
repository = "https://github.com/kennytm/cargo-kcov"
keywords = ["cargo", "subcommand", "kcov", "coverage"]
license = "MIT"

[badges]
travis-ci = { repository = "kennytm/cargo-kcov" }

[dependencies]
clap = "2.23"
shlex = "0.1"
term = "0.4"
serde_json = "0.9"
regex = "0.2"
open = "1.2"

[dev-dependencies]
rquery = "0.3"
tempdir = "0.3"

