[package]
name = "cargo-kcov"
version = "0.5.0"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Cargo subcommand to run kcov to get coverage report on Linux"
repository = "https://github.com/kennytm/cargo-kcov"
keywords = ["cargo", "subcommand", "kcov", "coverage"]
license = "MIT"

[badges]
travis-ci = { repository = "kennytm/cargo-kcov" }

[dependencies]
clap = "2"
shlex = "0.1"
term = "0.5"
serde_json = "1"
regex = "1"
open = "1"

[dev-dependencies]
rquery = "0.4"
tempdir = "0.3"

